--- a/main_op.css
+++ b/main_op.css
@@ -36,6 +36,17 @@ h1 {
       max-width: 200px;
     }
 
+  html {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    max-width: 100vw !important;
+    overflow: hidden !important;
+    overflow-y: auto !important;
+  }
+  html ::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .collapse-button {
