--- a/main_op.css
+++ b/main_op.css
@@ -32,21 +32,7 @@ h1 {
     .resize-on-mobile li {
       font-size: 0.4em;
     }
-    .tutorialSlide .top-slide .top-slide2 {
-      max-width: 200px;
-    }
 
-  html {
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    max-width: 100vw !important;
-    overflow: hidden !important;
-    overflow-y: auto !important;
-  }
-  html ::-webkit-scrollbar {
-    display: none;
-  }
 }
 
 .collapse-button {
@@ -252,6 +238,7 @@ h1 {
     align-items: center;
     z-index: 1000;
     display: none; /* Initially hidden */
+    overflow-y: auto;
 }
 
 .tutorialSlide ul {
@@ -271,6 +258,27 @@ h1 {
     max-width: 500px;
     text-align: center;
     font-family: "Poppins", sans-serif;
+    overflow-y: auto;
+}
+@media only screen and (max-width: 600px) {
+    .tutorialSlide .top-slide .top-slide2 {
+        max-width: 95%;
+        max-height: 95%;
+        padding: 10px;
+    }
+    .tutorialSlide .top-slide .top-slide2 img {
+        max-width: 100%;
+        height: auto;
+    }
+    .tutorialSlide .top-slide .top-slide2 h2 {
+        font-size: 1.5em;
+    }
+    .tutorialSlide .top-slide .top-slide2 p {
+        font-size: 1em;
+    }
+    .tutorialSlide .top-slide .top-slide2 button {
+        font-size: 1em;
+    }
 }
 
 .highlight {
